--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,10 @@
   },
   "dependencies": {
     "@ai-zen/live2d-core": "^1.0.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.7",
+    "@mui/material": "^7.3.7",
     "pixi-live2d-display-lipsyncpatch": "^0.5.0-ls-8",
     "pixi.js": "^7.4.3",
     "react": "^19.2.4",
