--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@mui/material": "^7.3.7",
     "pixi-live2d-display-lipsyncpatch": "^0.5.0-ls-8",
     "pixi.js": "^7.4.3",
+    "python-shell": "^5.0.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
   }
