--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "pixi.js": "^7.4.3",
     "python-shell": "^5.0.0",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "react-markdown": "^10.1.0"
   }
 }
